<resources>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="app_name">On Booting</string>
    <string name="new_script">New Script</string>
    <string name="script_name">Script name</string>
    <string name="save">Save</string>
    <string name="run">Run</string>
    <string name="confirm_save">Save script content?</string>
    <string name="save_successful">Save successful</string>
    <string name="auto_run">Auto run on booting</string>
    <string name="delete">Delete</string>
    <string name="delete_successful">Delete successful</string>
    <string name="close">Close</string>
    <string name="run_script_successful">Run script successful</string>
    <string name="run_script_failed">Run script failed</string>
    <string name="copy">Copy</string>
    <string name="result_code">Result Code</string>
    <string name="as_root">As a root user</string>
    <string name="running_script">Running script : %s</string>
    <string name="download_scripts">Download Scripts</string>
    <string name="about">About</string>
    <string name="donate">Donate</string>
    <string name="loading_script_list">Loading script list…</string>
    <string name="author">Author</string>
    <string name="description">Description</string>
    <string name="version_name">Version Name</string>
    <string name="version_code">Version Code</string>
    <string name="bootable">Bootable</string>
    <string name="rootable">Rootable</string>
    <string name="download_url">Download Url</string>
    <string name="download">Download</string>
    <string name="copied">Copied</string>
    <string name="downloading">Downloading…</string>
    <string name="download_successful">Download Successful</string>
    <string name="about_content">The app developed by Crixec, has been open to https://github.com/Crixec/OnBooting\nIf you have a good script, you can send to my mailbox\n79236107@qq.com\ncrixec@gmail.com</string>
    <string name="donate_content">Donations no matter how much, are the best encouragement to the author (the more the better)</string>
    <string name="wechat">Wechat</string>
    <string name="alipay">Alipay</string>
</resources>
