<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_save"
        android:title="@string/save"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_run"
        android:icon="@drawable/ic_run"
        android:title="@string/run"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_download_scripts"
        android:title="@string/download_scripts"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_donate"
        android:title="@string/donate"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:title="@string/about"
        app:showAsAction="never" />
</menu>
